@@ -1,7 +1,6 @@
 package org.leo.aws.ddb.utils;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 @SuppressWarnings("WeakerAccess")
@@ -35,7 +34,7 @@ public final class Tuple4<A, B, C, D> implements ITuple {
     }
 
     public Iterable<?> toIterable() {
-        return Collections.unmodifiableList(Arrays.asList(_1(), _2(), _3(), _4()));
+        return List.of(_1(), _2(), _3(), _4());
     }
 
     @Override
