@@ -1,7 +1,6 @@
 package org.leo.aws.ddb.utils;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 @SuppressWarnings("unused")
@@ -39,7 +38,7 @@ public final class Tuple5<A, B, C, D, E> implements ITuple {
     }
 
     public Iterable<?> toIterable() {
-        return Collections.unmodifiableList(Arrays.asList(_1(), _2(), _3(), _4(), _5()));
+        return List.of(_1(), _2(), _3(), _4(), _5());
     }
 
     @Override
